Add more integration/unit tests

--- a/local/docker-compose.yml
+++ b/local/docker-compose.yml
@@ -16,7 +16,7 @@ services:
       - "8080:8080"
     environment:
       - SPRING_DATA_MONGODB_URI=mongodb://mongo:mongo@mongodb
-      - ALLOWED_ORIGINS=http://localhost:4200
+      - ALLOWED_ORIGINS=http://localhost:4200,http://localhost:8888
   ui:
     build: ../agencies_manager_ui/
     ports:
